digicore/crates/digicore-text-expander/crates/digicore-text-expander/tests/snapshots/ocr_regression_tests__sample_20260307_212340.snap
---
source: crates/digicore-text-expander/tests/ocr_regression_tests.rs
expression: actual_text
---
There are various sources of news about Wikipedia, The Shortcut# Wikimedia Foundation that supports the project, and other WP:NEWS      Signpngtrelated Wikimedia projects.                                                                                                                            17 February 2026

|  |  | In the media: |  | Global powers see [hide] |  |
|---|---|---|---|---|---|
| Wikipedia |  | Wikipedia as fundamental target for |  |  |  |
| • | The Signpost (Shortcut: WP:POST, RSS t). The Wikipedia community | manipulation |  |  |  |
|  | newspaper that is written by volunteers and published biweekly. | Attempted | Wikipedia shenanigans apparentfrom |  |  |
|  | Wikipedia:Goings-on (Shortcut: WP:GO). Weekly news and updates | Epstein, AI, | various governments. |  |  |
|  | about • | News and | notes: |  | Discussions open for the next |




             existing or new projects or initiatives of Wikipedians.
                                                                                                            VVMF Annual      Plan    Wikipedia:Press coverage (Shortcut: WP:PRESS). What news media                                                                                                            Plus, WikiFlix going places, steady progress on older    say about Wikipedia                                                                                                            FAs and other   newsfrom the Wikimedia world.# - Wikipedia:Administrators' newsletter (Shortcut: WP:ANEWS). Md>thly                                                                                                            Serendipity:    Maintenance crews continue to slog     newsletter containing topics of interest to Wikipedia administrators.                                                                                                            through Wikipedia's oldest      Featured Articles
    Wikinews:Category:Wikipedia, archives of news about Wikipedia      Hundreds ofold FAs have been      triaged sinceproject
  - News aggregators: Google Newst • Techmeme      began, but thousands remain — and they need

                                                                                                            reviewers.Topic-specific newsletters
                                                                                                          - Disinformation report: Epstein's obsessions    Main page: Wikipedia:List of newsletters                                                                                                            The sex offender's attempts to whitewash Wikipedia run
| Other irregular newsletters exist. This list is limited to those which have |  | deeper than wefirst thought. |  |
|---|---|---|---|
| updated at least once in the last year. • |  | Technology report: Wikidata Graph Split and |  |
|  |  | how we address | major challenges |
| • | The Bugle, the Military history WikiProiect's newsletter monthl |  |  |